<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/version_history_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_root"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingRight="10dp"
        android:paddingBottom="4dp">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="@dimen/home_header_action_size"
            android:layout_height="@dimen/home_header_action_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_home_circle_button"
            android:contentDescription="@string/home_action_back"
            android:focusable="true"
            android:padding="11dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_axi_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/version_history_title"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/version_history_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="18dp"
            android:scrollbars="none"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/version_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/version_history_status_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/tv_version_history_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#B8FFFFFF"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btn_version_history_retry"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_app_dialog_action"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/version_history_retry"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
